--- a/ejs-challenge/views/home.ejs
+++ b/ejs-challenge/views/home.ejs
@@ -3,4 +3,9 @@
 <h1>Home</h1>
 <p><%= mainText %></p>
 
+<% for(let post of posts){ %> 
+  <h1><%= post.title %></h1>
+  <p><%= post.content %> </p>
+<% } %> 
+
 <%- include('partials/footer') %>
