Done with the EJS Challenge!
This was interesting to finish tbh. even though EJS might not be a relevant backend technology in Node & Express it was still fun to use

--- a/ejs-challenge/views/home.ejs
+++ b/ejs-challenge/views/home.ejs
@@ -5,7 +5,10 @@
 
 <% for(let post of posts){ %> 
   <h1><%= post.title %></h1>
-  <p><%= post.content %> </p>
+  <p>
+    <%= post.content.substring(0, 100) + '...' %>
+    <a href=<%= '/posts/' + post.postLink %> >Read More</a>
+  </p> 
 <% } %> 
 
 <%- include('partials/footer') %>
