Atomic commits to track progress better and retrace steps quicker

--- a/todolist-v1/views/list.ejs
+++ b/todolist-v1/views/list.ejs
@@ -20,7 +20,7 @@
       </div>
     <% } %> 
     <form action="/" method="POST" class="item">
-      <input type="text" name="new" id="newTask" placeholder="New Task" autocomplete="off">
+      <input type="text" name="new" id="newTask" placeholder="New Task" autocomplete="off" required title="Add a todo">
       <button type="submit">+</button>
     </form>
   </div>
