--- a/todolist-v1/views/list.ejs
+++ b/todolist-v1/views/list.ejs
@@ -14,10 +14,12 @@
   
   <div class="box">
     <% for(let todo of todos){ %> 
-      <div class="item">
-        <input type="checkbox">
-        <p> <%= todo %> </p>
-      </div>
+      <form action="/delete" method="post">
+        <div class="item">
+          <input name="todoChecked" type="checkbox" value="<%= todo._id %>" onchange="this.form.submit()">
+          <p> <%= todo.name %> </p>
+        </div>
+      </form>
     <% } %> 
     <form action="/" method="POST" class="item">
       <input type="text" name="new" id="newTask" placeholder="New Task" autocomplete="off" required title="Add a todo">
